compiler/tests/fixtures/invalid/semantics/query_all_in_singular_field.viv
// Invalid: query uses 'all' in singular-value field

action fight:
    roles:
        @fighter:
            as: initiator

query bad-all:
    roles:
        @witness:
            as: character
    action:
        any: fight
    location:
        all: @witness.home
